--- a/Modulo-1/Ejercicios-1.4/Ejercicio 5/style.css
+++ b/Modulo-1/Ejercicios-1.4/Ejercicio 5/style.css
@@ -7,19 +7,35 @@
   flex-direction: column;
   justify-content: flex-start;
   align-content: center;
-  width: 500px;
-  height: 700px;
+  width: 100vw;
+  height: 100vh;
   border: 1px solid purple;
 }
 
 .header {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   width: 100%;
-  height: 10%;
+  min-height: 10px;
   background-color: lightgrey;
 }
 
 .main {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  width: 100%;
+  min-height: 80%;
+  flex-grow: 1;
+  background-color: grey;
+}
+
+.footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  width: 100%;
+  flex-basis: 5%;
+  background-color: orange;
 }
