--- a/Modulo-1/leccion-1.12/ejercicio-3/style.css
+++ b/Modulo-1/leccion-1.12/ejercicio-3/style.css
@@ -5,7 +5,7 @@ body {
 .wrapper {
   height: 100vh;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(12, 1fr);
   grid-template-rows: 20vh 60vh 20vh;
 }
 
