Add footer css grid

--- a/Modulo-1/SPOTIFY/stylesheets/main.css
+++ b/Modulo-1/SPOTIFY/stylesheets/main.css
@@ -11,6 +11,12 @@
   text-decoration: none;
 }
 
+ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
 @font-face {
   font-family: Circular;
   src: url("https://sp-bootstrap.global.ssl.fastly.net/8.12.1/fonts/circular-light.woff2")
@@ -50,7 +56,6 @@ html {
   max-width: 1200px;
   margin: auto;
   width: 100%;
-  border: 1px solid green;
   padding: 15px;
 }
 
@@ -69,7 +74,6 @@ html {
 .header-logo {
   display: inline-block;
   width: 115px;
-  border: 1px solid red;
 }
 
 .header-logo img {
@@ -139,9 +143,45 @@ html {
   flex-shrink: 0;
 }
 
+/* FOOTER */
+
+.footer {
+  background-color: var(--primary-color);
+  color: var(--light-color);
+  padding-top: 20px;
+}
+
+.footer .wrapper {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.footer .wrapper nav {
+  grid-column: span 2;
+  padding-top: 15px;
+}
+
+.footer-menu li {
+  display: inline;
+}
+
+.footer-menu li a {
+  padding: 5px;
+}
+
+.footer-menu li:last-child {
+  display: block;
+  width: 100%;
+}
+
+.copy span {
+  display: block;
+}
+
 @media all and (min-width: 768px) {
   .header-menu {
     display: block;
+    text-align: right;
   }
 
   .header-mobile-button {
@@ -161,6 +201,11 @@ html {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
+  }
+
+  .footer-menu li:last-child {
+    display: inline;
+    width: auto;
   }
 }
 
