--- a/modulo-2/modulo-2-practica-fin-de-semana-02-fetch/app/styles/main.css
+++ b/modulo-2/modulo-2-practica-fin-de-semana-02-fetch/app/styles/main.css
@@ -1,9 +1,13 @@
 * {
   box-sizing: border-box;
   padding: 0;
-  margin: 0
+  margin: 0;
 }
 
 body {
   font-family: 'Noto Sans', sans-serif;
+}
+
+.selected {
+  background-color: cyan;
 }
